<resources>
    <string name="app_name">MicroServices</string>
    <string name="app_start">Приложение запущено</string>

    <string name="my_bank">Мой Банк</string>
    <string name="payment">Платежи</string>
    <string name="history">История</string>
    <string name="more">Еще</string>

    <string name="deposits">Вклады</string>
    <string name="accounts">Счета</string>
    <string name="cards">Карты</string>

    <string name="fragment_open_account_transaction_action_button">Открыть счет</string>
    <string name="fragment_open_account_transaction_friendly_name_subtitle">Наименование счета</string>
    <string name="fragment_open_account_transaction_friendly_name_hint">Например: "Текущий счет"</string>
    <string name="fragment_open_account_transaction_balance_subtitle">Баланс по счету</string>
    <string name="fragment_open_account_transaction_balance_value_hint">Например: 100000</string>

    <string name="location_error">Ошибка геолокации. Попробуйте еще раз</string>
    <string name="restart_location">Перегрузите устройство. Не работатает служба получения адреса</string>

    <string name="example_location">Пример работы с геолокацией</string>
    <string name="example_net_json">Пример работы с сетевыми запросами Json</string>
    <string name="example_net_xml">Пример работы с сетевыми запросами XML</string>
    <string name="example_image">Пример загрузки картинок</string>
    <string name="example_capture">Пример сделать фото</string>

    <string name="search_hint">Найти</string>
    <string name="take_foto">Сфотографировать</string>
    <string name="select_foto">Выбрать</string>

</resources>