<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:layout_marginRight="@dimen/dimen_16dp"
            android:layout_marginBottom="@dimen/dimen_8dp"
            android:text="@string/fragment_open_account_transaction_friendly_name_subtitle"
            android:textSize="@dimen/text_size_xlarge" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:cardCornerRadius="0dp"
            app:cardElevation="@dimen/dimen_4dp"
            android:minHeight="@dimen/dimen_56dp">

            <EditText
                android:id="@+id/friendlyNameView"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/fragment_open_account_transaction_friendly_name_hint"
                android:inputType="text|textCapSentences"
                android:lines="1"
                android:maxLength="120"
                android:maxLines="1"
                android:paddingLeft="@dimen/dimen_16dp"
                android:paddingRight="@dimen/dimen_16dp" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/friendlyNameValidationView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:layout_marginBottom="@dimen/dimen_8dp"
            android:paddingLeft="@dimen/dimen_16dp"
            android:paddingRight="@dimen/dimen_16dp"
            android:textColor="@color/red"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:layout_marginRight="@dimen/dimen_16dp"
            android:layout_marginBottom="@dimen/dimen_8dp"
            android:text="@string/fragment_open_account_transaction_balance_subtitle"
            android:textSize="@dimen/text_size_xlarge" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:cardCornerRadius="0dp"
            app:cardElevation="@dimen/dimen_4dp"
            android:minHeight="@dimen/dimen_56dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/balanceValueView"
                    style="@style/EditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:hint="@string/fragment_open_account_transaction_balance_value_hint"
                    android:lines="1"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/dimen_16dp"
                    android:paddingRight="@dimen/dimen_16dp"
                    android:inputType="numberDecimal" />

                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/spinner"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/text_size_large" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <View
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:layout_height="@dimen/dimen_8dp" />

    </LinearLayout>

    <lib.shishkin.common.RippleTextView
        android:id="@+id/openAccountButton"
        style="@style/FlatOrangeButtonStyle"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:enabled="false"
        android:text="@string/fragment_open_account_transaction_action_button" />

    <me.zhanghai.android.materialprogressbar.MaterialProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-6dp"
        android:indeterminate="true"
        android:visibility="invisible"
        app:mpb_indeterminateTint="@color/orange"
        app:mpb_progressStyle="horizontal"
        app:mpb_showProgressBackground="false" />


</RelativeLayout>
