<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <LinearLayout
            android:id="@+id/balanceLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@color/gray"
            android:minHeight="@dimen/menu_header_height"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginEnd="@dimen/dimen_8dp"
                android:layout_weight="1"
                android:text="Баланс"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_xlarge" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/balance_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/dimen_8dp"
                android:layout_marginTop="@dimen/dimen_4dp"
                android:layout_marginEnd="@dimen/dimen_16dp"
                android:layout_marginBottom="@dimen/dimen_4dp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/bottomMenu"
            android:layout_below="@+id/balanceLL"
            android:background="@color/background"
            android:scrollbars="vertical" />

        <View
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_below="@+id/balanceLL"
            android:background="@drawable/below_shadow" />

        <me.zhanghai.android.materialprogressbar.MaterialProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="-6dp"
            android:indeterminate="true"
            android:visibility="invisible"
            app:mpb_indeterminateTint="@color/orange"
            app:mpb_progressStyle="horizontal"
            app:mpb_showProgressBackground="false" />

        <LinearLayout
            android:id="@+id/bottomMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_56dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/exchange_cryptorates"
                    style="@style/SideMenuBottomButtonStyle"
                    android:drawableTop="@drawable/ic_home"
                    android:gravity="center"
                    android:text="@string/my_bank" />

                <View
                    android:background="@drawable/below_shadow"
                    style="@style/VerticalDivider" />

                <TextView
                    android:id="@+id/exchange_rates"
                    style="@style/SideMenuBottomButtonStyle"
                    android:drawableTop="@drawable/ic_money"
                    android:text="@string/payment" />

                <View
                    android:background="@drawable/below_shadow"
                    style="@style/VerticalDivider" />

                <TextView
                    android:id="@+id/address"
                    style="@style/SideMenuBottomButtonStyle"
                    android:drawableTop="@drawable/ic_history"
                    android:text="@string/history" />

                <View
                    android:background="@drawable/below_shadow"
                    style="@style/VerticalDivider" />

                <TextView
                    android:id="@+id/contact"
                    style="@style/SideMenuBottomButtonStyle"
                    android:drawableTop="@drawable/ic_more"
                    android:text="@string/more" />
            </LinearLayout>



        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_above="@id/bottomMenu"
            android:background="@drawable/above_shadow" />
    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>

