<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="@dimen/menu_item_height"
                android:orientation="horizontal"
                app:mrl_rippleAlpha="0.2"
                app:mrl_rippleColor="#585858"
                app:mrl_rippleDelayClick="false"
                app:mrl_rippleHover="true"
                app:mrl_rippleOverlay="true">

                <LinearLayout
                    android:id="@+id/map"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/item_title"
                        style="@style/HelveticaTextStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/dimen_12dp"
                        android:paddingRight="@dimen/dimen_8dp"
                        android:text="@string/example_location"
                        android:textColor="@color/gray_text"
                        android:textSize="@dimen/text_size_large" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingRight="@dimen/dimen_8dp"
                        app:srcCompat="@drawable/chevron_right_dark" />
                </LinearLayout>

            </com.balysv.materialripple.MaterialRippleLayout>

            <View style="@style/HorizontalThinDivider" />

            <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="@dimen/menu_item_height"
                android:orientation="horizontal"
                app:mrl_rippleAlpha="0.2"
                app:mrl_rippleColor="#585858"
                app:mrl_rippleDelayClick="false"
                app:mrl_rippleHover="true"
                app:mrl_rippleOverlay="true">

                <LinearLayout
                    android:id="@+id/netJSON"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/HelveticaTextStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/dimen_12dp"
                        android:paddingRight="@dimen/dimen_8dp"
                        android:text="@string/example_net_json"
                        android:textColor="@color/gray_text"
                        android:textSize="@dimen/text_size_large" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingRight="@dimen/dimen_8dp"
                        app:srcCompat="@drawable/chevron_right_dark" />
                </LinearLayout>

            </com.balysv.materialripple.MaterialRippleLayout>

            <View style="@style/HorizontalThinDivider" />

            <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="@dimen/menu_item_height"
                android:orientation="horizontal"
                app:mrl_rippleAlpha="0.2"
                app:mrl_rippleColor="#585858"
                app:mrl_rippleDelayClick="false"
                app:mrl_rippleHover="true"
                app:mrl_rippleOverlay="true">

                <LinearLayout
                    android:id="@+id/netXML"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/HelveticaTextStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/dimen_12dp"
                        android:paddingRight="@dimen/dimen_8dp"
                        android:text="@string/example_net_xml"
                        android:textColor="@color/gray_text"
                        android:textSize="@dimen/text_size_large" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingRight="@dimen/dimen_8dp"
                        app:srcCompat="@drawable/chevron_right_dark" />
                </LinearLayout>

            </com.balysv.materialripple.MaterialRippleLayout>

            <View style="@style/HorizontalThinDivider" />

            <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="@dimen/menu_item_height"
                android:orientation="horizontal"
                app:mrl_rippleAlpha="0.2"
                app:mrl_rippleColor="#585858"
                app:mrl_rippleDelayClick="false"
                app:mrl_rippleHover="true"
                app:mrl_rippleOverlay="true">

                <LinearLayout
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/HelveticaTextStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/dimen_12dp"
                        android:paddingRight="@dimen/dimen_8dp"
                        android:text="@string/example_image"
                        android:textColor="@color/gray_text"
                        android:textSize="@dimen/text_size_large" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingRight="@dimen/dimen_8dp"
                        app:srcCompat="@drawable/chevron_right_dark" />
                </LinearLayout>

            </com.balysv.materialripple.MaterialRippleLayout>

            <View style="@style/HorizontalThinDivider" />

            <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="@dimen/menu_item_height"
                android:orientation="horizontal"
                app:mrl_rippleAlpha="0.2"
                app:mrl_rippleColor="#585858"
                app:mrl_rippleDelayClick="false"
                app:mrl_rippleHover="true"
                app:mrl_rippleOverlay="true">

                <LinearLayout
                    android:id="@+id/capture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/HelveticaTextStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/dimen_12dp"
                        android:paddingRight="@dimen/dimen_8dp"
                        android:text="@string/example_capture"
                        android:textColor="@color/gray_text"
                        android:textSize="@dimen/text_size_large" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingRight="@dimen/dimen_8dp"
                        app:srcCompat="@drawable/chevron_right_dark" />
                </LinearLayout>

            </com.balysv.materialripple.MaterialRippleLayout>

            <View style="@style/HorizontalThinDivider" />

        </LinearLayout>


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

